# cxx-modules

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt
data/compilers/: clang.xml  gcc.xml
extras/: CMakeLists.txt
extras/hilite-cxx/: CMakeLists.txt  cxx.cc
extras/hilite-cxx/hilite/: cxx.hh
libs/: CMakeLists.txt
libs/libcell/: CMakeLists.txt
libs/libcell/include/cell/: ascii.hh  character.hh  context.hh  operators.hh  parser.hh  repeat_operators.hh  special.hh  string.hh  tokens.hh
libs/libcell/src/: ascii.cc  character.cc  context.cc  operators.cc  parser.cc  repeat_operators.cc  special.cc  string.cc  tokens.cc
libs/libfs/: CMakeLists.txt
libs/libfs/include/fs/: file.hh
libs/libfs/src/: file.cc
libs/libhilite/: CMakeLists.txt
libs/libhilite/include/hilite/: hilite.hh  hilite_impl.hh  none.hh
libs/libhilite/src/: hilite.cc  none.cc
src/: compiler.cc  compiler.hh  dirs.in.hh  generator.cc  generator.hh  logger.cc  logger.hh  main.cc  scanner.cc  scanner.hh  types.cc  utils.hh  xml.hh
src/base/: compiler.cc  compiler.hh  generator.cc  generator.hh  logger.cc  logger.hh  types.cc  types.hh  utils.hh
src/compilers/: cl.cc  clang.cc  gcc.cc
src/cxx/: scanner.cc  scanner.hh
src/env/: binary_interface.cc  binary_interface.hh  command_list.cc  command_list.hh  defaults.cc  defaults.hh  include_locator.cc  include_locator.hh  path.cc  path.hh
src/generators/: dot.cc  dot.hh  msbuild.cc  msbuild.hh  ninja.cc  ninja.hh
src/win32/: Setup.Configuration.h  vssetup.cc  vssetup.hh
src/xml/: compiler.cc  compiler.hh  expat.hh  factory.cc  factory.hh  handlers-internal.hh  handlers.cc  handlers.hh  parser.cc  parser.hh  types.hh  xml.cc
tests/: tests.py
tests/01-cxx17/: main.cc  sources.json
tests/02-internal/: main.cc  mod.cc
tests/03-strings/: mod.cc
tests/03-strings-hm/: main.cc  mod.cc  sources.json
tests/03-strings-inc/: main.cc  mod.cc
tests/04-impl/: main.cc  mod-impl.cc
tests/05-strings-B/: main.cc  mod-iface.cc  mod-impl.cc  sources.json
tests/06-static-lib/: main.cc  sources.json
tests/06-static-lib/app/: main.cc  sources.json
tests/06-static-lib/lib/: internal.cc  mod-iface.cc  mod-impl.cc  sources.json
tests/07-partition/app/: main.cc
tests/07-partition/lib/: module.cc  sources.json
tests/07-partition/lib/module/: _config.cc  impl.cc
